--- a/Decision Trees and Random Forest.ipynb
+++ b/Decision Trees and Random Forest.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing packages\n",
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -21,6 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#reading diabtes dataset as a dataframe\n",
     "df=pd.read_csv('diabetes.csv')"
    ]
   },
@@ -52,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#creating the independent variables dataset\n",
     "X=df.iloc[:,0:-1]"
    ]
   },
@@ -265,6 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#creating the dependent variable dataset\n",
     "Y=df.iloc[:,-1]"
    ]
   },
@@ -307,6 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Spliting the dataset into training and testing data. using 70-30 Ratio\n",
     "X_train, X_test, Y_train, Y_test=train_test_split(X,Y, test_size=0.3)"
    ]
   },
@@ -317,6 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#using decision tree classifier from sklearn\n",
     "clf = DecisionTreeClassifier()"
    ]
   },
@@ -327,6 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#fiting the model\n",
     "clf = clf.fit(X_train,Y_train)"
    ]
   },
@@ -337,6 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#prediciting the dependent variables for test data\n",
     "Y_pred=clf.predict(X_test)"
    ]
   },
@@ -389,6 +397,7 @@
     }
    ],
    "source": [
+    "#looking at teh accuracy of the model\n",
     "metrics.accuracy_score(Y_test,Y_pred)"
    ]
   },
@@ -399,6 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing Random Forest Classifier\n",
     "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
@@ -450,6 +460,7 @@
     }
    ],
    "source": [
+    "#since decision trees is week classifier, using random forest further increased the accuracy of the model\n",
     "metrics.accuracy_score(Y_test,Y_pred1)"
    ]
   },
